# diningcity-sms-to-ics

./: .gitignore  .pre-commit-config.yaml  README.md  diningcity_sms_to_ics.py  pyproject.toml
