[tool.poetry]
name = "diningcity-sms-to-ics"
version = "0.1.0"
description = ""
authors = ["Wu Haotian <whtsky@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9"
ics = "^0.7"
arrow = "<0.15"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
